--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 html{
-    width: 100;
+    width: 100%;
     height: 100%;
 }
 
 body{
     background-color: #F2F2F2;
+    
 }
 
 .or{
@@ -15,7 +16,39 @@ body{
     background-repeat: no-repeat;
     width: 100%;
 }
+
+.rightside{
+    text-align: left;
+    justify-content: flex-start;
+    align-items: center;
+    width: 300px;
+
+}
+
+
+label{
     
+}
+
+
+.PostmanIcon{
+    width: 200px;
+    height: 60px;
+    display: block;
+    margin: 28px auto 16px;
+    background-size: 180px 50px;
+    
+
+}
+
+.fAccount{
+    background-color: orangered;
+    border: none;
+    text-align: center;
+    border-radius: 5px;
+  color: blue;
+}
+
 .formContainer{
     background-color: white;
     display: flex;
@@ -26,9 +59,26 @@ body{
     height: 100%;
     width: 700px;
 }
+
 ul{
     text-align: left;
+    color: white;
+    padding-left: 65px;
+    padding-right: 65px;
+    font-size: 18px;
+
 }
+
+
+.Signuph2{
+    color: white;
+    text-align: center;
+    font-size: 18px;
+
+}
+
+
+
 
 input{
     outline: none;
@@ -37,5 +87,6 @@ input{
 }
 
 h3{
-   margin-right: 50px;
+
 }
+
